# backend-core

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.txt  docker-compose.yml  gha_deploy  gha_deploy.pub  pyproject.toml  reproduce_issue.py  test_debug_2.txt  test_debug_s.txt  test_output.txt  test_output_3.txt  test_output_4.txt  test_output_debug.txt
.agent/rules/: instructions.md
.github/workflows/: deploy-dev-ec2.yml  docker-build.yml
app/: db.py  main.py
app/api/: auth.py  deps.py  vitals.py
app/core/: cache.py  config.py  db.py  logging.py  middleware.py  security.py
app/models/: __init__.py  user.py  vital.py
app/modules/alerts/: __init__.py  config.py  decision.py  engine.py  manager.py  mock_rules.json  models.py  router.py  schemas.py  service.py
app/modules/auth/: constants.py  router.py  schemas.py  service.py
app/modules/caregivers/: router.py
app/modules/caregivers/alerts/: __init__.py  router.py
app/modules/caregivers/conditions/: __init__.py  router.py
app/modules/caregivers/messages/: __init__.py  router.py  schemas.py  service.py
app/modules/caregivers/patient_conditions/: __init__.py  models.py  (+2 more)
app/modules/chat/: router.py
app/modules/daily_checkin/: __init__.py  models.py  schemas.py  service.py
app/modules/users/: models.py  router.py  schemas.py  service.py
app/modules/vitals/: models.py  router.py  schemas.py  service.py
app/schemas/: user.py
app/shared/: constants.py  deps.py  schemas.py
backend_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: API_ENDPOINTS.md  CAREGIVER_ALERTS_REORGANIZATION.md  IMPLEMENTATION_SUMMARY_CAREGIVER_SSE.md  QUICKSTART_CAREGIVER_SSE.md  alerts-architecture-diagram.md  alerts-sse-migration.md  alerts-workflow.md  caregiver-alert-streaming.md  caregiver-dashboard-endpoint.md  important-scripts.md  instructions_backup.md  sse-implementation-summary.md
examples/: caregiver_alert_client.py  sse_alert_client.py
production/: ec2-starter-script.txt  important scripts.txt
scripts/: README_ALERTS.md  send_test_alert.py  send_vitals_ws.py  test_alert_sender.py  test_alerts.sh
tests/: conftest.py  debug_sentry.py  manual_logging_test.py  test_api.py
tests/core/: test_cache.py
tests/modules/alerts/: conftest.py  test_sse_router.py  test_ws_alerts.py
tests/modules/auth/: test_constants.py  test_router.py  test_router_unit.py  test_schemas.py  test_service.py
tests/modules/caregivers/: helpers.py  test_access_admin.py  test_access_conditions.py  test_access_requests.py  test_access_roles.py  test_vitals_router.py
tests/modules/chat/: test_ws_chat.py
tests/modules/daily_checkin/: test_router.py  test_service_unit.py
tests/modules/users/: test_router.py
tests/modules/vitals/: test_router.py  test_router_helpers.py  test_router_unit.py  test_schemas_unit.py  test_service_unit.py  test_ws_frontend.py  test_ws_mobile_module.py  test_ws_vitals.py
(+17 files in other folders)
