[project]
name = "backend-core"
version = "0.1.0"
description = "Backend Core Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.14",
    "structlog>=23.1.0",
    "sentry-sdk>=1.29.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
